--- a/Math.Mpfr.Native/Math.Mpfr.Native.csproj
+++ b/Math.Mpfr.Native/Math.Mpfr.Native.csproj
@@ -63,6 +63,10 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="mpfr_exp_t.cs" />
+    <Compile Include="mpfr_rnd_t.cs" />
+    <Compile Include="mpfr_t.cs" />
+    <Compile Include="mpfr_prec_t.cs" />
     <Compile Include="va_list.cs" />
     <Compile Include="mp_base.cs" />
     <Compile Include="FILE.cs" />
