--- a/Math.Mpfr.Native/Math.Mpfr.Native.csproj
+++ b/Math.Mpfr.Native/Math.Mpfr.Native.csproj
@@ -9,9 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Math.Mpfr.Native</RootNamespace>
     <AssemblyName>Math.Mpfr.Native</AssemblyName>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -60,33 +62,22 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Math.Gmp.Native, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Math.Gmp.Native.NET.1.6.5\lib\net20\Math.Gmp.Native.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="mpfr_kind_t.cs" />
+    <Compile Include="mpfr_sign_t.cs" />
     <Compile Include="mpfr_exp_t.cs" />
     <Compile Include="mpfr_rnd_t.cs" />
     <Compile Include="mpfr_t.cs" />
     <Compile Include="mpfr_prec_t.cs" />
     <Compile Include="va_list.cs" />
-    <Compile Include="mp_base.cs" />
-    <Compile Include="FILE.cs" />
-    <Compile Include="mp_ptr.cs" />
-    <Compile Include="mp_exp_t.cs" />
-    <Compile Include="mp_size_t.cs" />
-    <Compile Include="mp_limb_t.cs" />
-    <Compile Include="mp_bitcnt_t.cs" />
-    <Compile Include="ptr.cs" />
-    <Compile Include="size_t.cs" />
-    <Compile Include="void_ptr.cs" />
-    <Compile Include="free_function.cs" />
-    <Compile Include="char_ptr.cs" />
-    <Compile Include="reallocate_function.cs" />
-    <Compile Include="allocate_function.cs" />
     <Compile Include="mpfr_lib.cs" />
-    <Compile Include="mpf_t.cs" />
-    <Compile Include="mpq_t.cs" />
-    <Compile Include="gmp_randstate_t.cs" />
-    <Compile Include="mpz_t.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -103,19 +94,27 @@
     <None Include="Dependencies\msys2-x86_64-20161025.exe" />
     <None Include="Dependencies\yasm-1.3.0-win32.exe" />
     <None Include="Dependencies\yasm-1.3.0-win64.exe" />
-    <Content Include="x64\libgmp-10.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="x86\libgmp-10.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="Math.Mpfr.Native.ruleset" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="x64\libmpfr-4.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="x86\libmpfr-4.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\Baseclass.Contrib.Nuget.Output.2.4.0\build\net40\Baseclass.Contrib.Nuget.Output.targets" Condition="Exists('..\packages\Baseclass.Contrib.Nuget.Output.2.4.0\build\net40\Baseclass.Contrib.Nuget.Output.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Baseclass.Contrib.Nuget.Output.2.4.0\build\net40\Baseclass.Contrib.Nuget.Output.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Baseclass.Contrib.Nuget.Output.2.4.0\build\net40\Baseclass.Contrib.Nuget.Output.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
