--- a/Math.Mpfr.Native/packages.config
+++ b/Math.Mpfr.Native/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Baseclass.Contrib.Nuget.Output" version="2.4.0" targetFramework="net40" />
   <package id="EWSoftware.SHFB" version="2017.5.15.0" targetFramework="net40" />
   <package id="EWSoftware.SHFB.NETFramework" version="4.7" targetFramework="net40" />
+  <package id="Math.Gmp.Native.NET" version="1.6.5" targetFramework="net40" />
 </packages>
